# RL-Market-Maker-Microstructure-Predictor-Trading-Strategy

./: .gitignore  API_ENDPOINTS.md  DASHBOARD_START_GUIDE.md  Dockerfile  FINAL_DASHBOARD_SOLUTION.md  FIX_DASHBOARD.md  FIX_PYTHON313.md  FIX_SCIPY_OPENBLAS.md  GETTING_STARTED.md  INSTALL_DASHBOARD_ONLY.md  LICENSE  Makefile  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  PYTHON313_COMPATIBILITY_FIX.md  PYTHON313_WORKAROUND.md  QUICK_DASHBOARD_FIX.md  QUICK_START.md  QUICK_START_DASHBOARD.md  QUICK_START_MACOS.md  QUICK_TRAIN_RL.md  README.md  SCIPY_FIXED.md  demo_workflow.sh  docker-compose.yml  fix_plotly_permissions.sh  install_scipy.sh  live_demo.py  requirements.txt  requirements_dashboard.txt  test_strategy_connection.py
config/: config.yaml
core/cpp/: CMakeLists.txt  README.md  bindings.cpp  build.sh  matching_engine.cpp  matching_engine.h  setup.py  test_cpp_engine.py
core/ocaml/: README.md
core/rust/: README.md
dashboard/: app.py
docs/: ADDITIONAL_FEATURES.md  ASSET_CLASS_CONFIG.md  DASHBOARD_GUIDE.md  DATA_SOURCES.md  ENHANCEMENT_ROADMAP.md  LOW_LATENCY_ARCHITECTURE.md  MIGRATION_PLAN.md  NEW_FEATURES_SUMMARY.md  PYTHON_CPP_INTEGRATION.md  REAL_DATA_INTEGRATION.md  RL_AGENT_GUIDE.md
examples/: quick_start.py  test_new_features.py  use_real_data.py
scripts/: run_dashboard.py  run_interface.py  run_rl_strategy.py  run_strategy.py  train_rl.py
src/: __init__.py
src/analysis/: __init__.py  order_flow_advanced.py  pairs_trading.py  regime_detection.py  tca.py
src/backtest/: __init__.py  replay.py
src/data/: __init__.py  market_data_source.py
(+40 files in other folders)
